--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "express": "^5.1.0",
     "mysql2": "^3.15.3",
     "zod": "4.1.12"
+  },
+  "devDependencies": {
+    "ejs": "^3.1.10"
   }
 }
